feat: update createGroup
